--- a/src/sass/base/_queries.scss
+++ b/src/sass/base/_queries.scss
@@ -72,16 +72,12 @@
       cursor: none;
       color: inherit;
     }
-
-    &:active {
-      color: var(--primary-blue);
-    }
   }
 
   .task-check-style {
     &:hover {
       cursor: none;
-      background: linear-gradient(to right, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+      background: inherit;
     }
 
     &:active {
